--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "element-ui": "^2.0.1",
     "material-design-icons": "^3.0.1",
+    "onlyid-frontend-common": "file:../onlyid-frontend-common",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -55,6 +57,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "uglifyjs-webpack-plugin": "^1.1.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
