拆分控制台出去；为了seo使用预渲染；所有页面加上标题；图片统一改成使用移动app作为demo；改名手机账号；精简页面内容 减少margin使其更紧凑；其他小改动

--- a/.babelrc
+++ b/.babelrc
@@ -11,8 +11,7 @@
   "plugins": [],
   "env": {
     "test": {
-      "presets": ["env"],
-      "plugins": ["istanbul"]
+      "presets": ["env"]
     }
   }
 }
