--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.4.0",
     "portfinder": "^1.0.13",
+    "prerender-spa-plugin": "^3.2.1",
     "rimraf": "^2.6.0",
     "semver": "^5.5.0",
     "shelljs": "^0.7.6",
