--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@vue/cli-plugin-eslint": "^3.9.2",
     "@vue/cli-service": "^3.9.2",
     "@vue/eslint-config-standard": "^3.0.5",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "prerender-spa-plugin": "^3.4.0",
     "vue-template-compiler": "^2.6.10"
   },
