--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
+    "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "regenerator-runtime": "^0.13.5",
     "vconsole": "^3.3.4"
   },
   "scripts": {
