refactor: 优化前端路由跳转时的页面滚动逻辑

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vconsole": "^3.3.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
